changes based on py tutorial

--- a/_posts/plotly_js/maps/fill-area-on-mapbox/2019-09-02-geojson_layers.html
+++ b/_posts/plotly_js/maps/fill-area-on-mapbox/2019-09-02-geojson_layers.html
@@ -1,9 +1,9 @@
 ---
-name: Dark tile, Free Token is required
+name: GeoJSON Layers
 plot_url: https://codepen.io/plotly/embed/zYOZVWW/?height=510&theme-id=15263&default-tab=result
 language: plotly_js
-suite: lines-on-mapbox
-order: 2
+suite: filled-area-on-mapbox
+order: 3
 sitemap: false
 arrangement: horizontal
 markdown_content: |
