map examples updated to have inline charts once branch hits master

--- a/_posts/plotly_js/maps/fill-area-on-mapbox/2019-09-02-access-token.html
+++ b/_posts/plotly_js/maps/fill-area-on-mapbox/2019-09-02-access-token.html
@@ -1,6 +1,5 @@
 ---
 name: Mapbox Access Token
-plot_url: https://codepen.io/plotly/embed/WNepqgo/?height=510&theme-id=15263&default-tab=result
 language: plotly_js
 suite: filled-area-on-mapbox
 order: 1
@@ -38,4 +37,4 @@ var layout = {
 	width: 600
 };
 
-Plotly.newPlot("gd", data, layout);
+Plotly.newPlot("myDiv", data, layout);
