--- a/_posts/plotly_js/maps/fill-area-on-mapbox/2019-09-02-multi-filled-area.html
+++ b/_posts/plotly_js/maps/fill-area-on-mapbox/2019-09-02-multi-filled-area.html
@@ -1,6 +1,5 @@
 ---
 name: Multiple Filled Areas with a Scattermapbox trace
-plot_url: https://codepen.io/plotly/embed/ZEzeVBM/?height=510&theme-id=15263&default-tab=result
 language: plotly_js
 suite: filled-area-on-mapbox
 order: 2
@@ -23,4 +22,4 @@ var layout = {
 	showlegend: false,
 	width:700, height: 700}
 
-Plotly.newPlot("gd", data, layout)
+Plotly.newPlot("myDiv", data, layout)
