--- a/_posts/plotly_js/maps/scattermapbox/2019-09-02-symbols.html
+++ b/_posts/plotly_js/maps/scattermapbox/2019-09-02-symbols.html
@@ -1,6 +1,5 @@
 ---
 name: Set Marker Symbols
-plot_url: https://codepen.io/plotly/embed/PoYjYMy/?height=510&theme-id=15263&default-tab=result
 language: plotly_js
 suite: scattermapbox
 order: 5
@@ -28,4 +27,4 @@ var layout = {
 
 var config = {mapboxAccessToken: "add-your-token-here"};
 
-Plotly.newPlot("gd", data, layout, config);
+Plotly.newPlot("myDiv", data, layout, config);
