textemplate example charts will be inlined once branch is merged

--- a/_posts/plotly_js/transforms/texttemplate/2019-10-21-add_text_template.html
+++ b/_posts/plotly_js/transforms/texttemplate/2019-10-21-add_text_template.html
@@ -1,6 +1,5 @@
 ---
 name: Add Text Template in Pie Chart
-plot_url: https://codepen.io/plotly/embed/BaaWzjd/?height=500&theme-id=15263&default-tab=result
 language: plotly_js
 suite: texttemplate
 order: 1
@@ -17,4 +16,4 @@ var data = [{
   textposition: "inside"
 }];
 
-Plotly.newPlot(graphDiv, data)
+Plotly.newPlot("myDiv", data)
