--- a/_posts/plotly_js/transforms/texttemplate/2019-10-21-date-in-text-template.html
+++ b/_posts/plotly_js/transforms/texttemplate/2019-10-21-date-in-text-template.html
@@ -1,6 +1,5 @@
 ---
 name: Set Date in Text Template
-plot_url: https://codepen.io/plotly/embed/vYYxEbv/?height=500&theme-id=15263&default-tab=result
 language: plotly_js
 suite: texttemplate
 order: 3
@@ -29,4 +28,4 @@ var data = [{
 
 var layout = {yaxis: {type: 'date'}}
 
-Plotly.newPlot(graphDiv, data, layout)
+Plotly.newPlot("myDiv", data, layout)
