--- a/_posts/plotly_js/transforms/texttemplate/2019-10-21-customize_text_template.html
+++ b/_posts/plotly_js/transforms/texttemplate/2019-10-21-customize_text_template.html
@@ -1,6 +1,5 @@
 ---
 name: Customize Text Template
-plot_url: https://codepen.io/plotly/embed/yLLggdL/?height=500&theme-id=15263&default-tab=result
 language: plotly_js
 suite: texttemplate
 order: 2
@@ -21,4 +20,4 @@ var data = [{
       textfont:{'family': "Times", 'size': [18, 21, 20], 'color': ["IndianRed", "MediumPurple", "DarkOrange"]}
 }];
 
-Plotly.newPlot(graphDiv, data)
+Plotly.newPlot("myDiv", data)
